[gd_scene load_steps=18 format=3 uid="uid://4ygt54d3or1g"]

[ext_resource type="Script" path="res://Scripts/Main.gd" id="1_onfnt"]
[ext_resource type="PackedScene" uid="uid://h0ctogrwmi1w" path="res://PackedScenes/Ship.tscn" id="1_pklpr"]
[ext_resource type="Script" path="res://Scripts/Chunk and EnemySpawner Generator/LevelGenerator.gd" id="2_56lf0"]
[ext_resource type="PackedScene" uid="uid://sfms2jukwolq" path="res://PackedScenes/meteor_chunk.tscn" id="3_c2weg"]
[ext_resource type="Script" path="res://Scripts/Chunk and EnemySpawner Generator/MeteorChunkGenerator.gd" id="5_6t7r7"]
[ext_resource type="PackedScene" uid="uid://bcfygdv2d5j3b" path="res://PackedScenes/enemy_1_spawner.tscn" id="5_sxyyw"]
[ext_resource type="Texture2D" uid="uid://v2kqx0vuom2b" path="res://Recources/Textures/panorama_image.png" id="6_41ej3"]
[ext_resource type="Script" path="res://Scripts/Chunk and EnemySpawner Generator/Enemy1SpawnerGenerator.gd" id="6_wuj5a"]
[ext_resource type="Script" path="res://Scripts/Chunk and EnemySpawner Generator/EmtyChunkGenerator.gd" id="8_mh8ji"]
[ext_resource type="PackedScene" uid="uid://cdfp1rxvjbd26" path="res://PackedScenes/emty_chunk.tscn" id="9_n3uu1"]
[ext_resource type="Script" path="res://Scripts/Chunks and Enemyspawner/Enemy2Spawner.gd" id="10_4c08n"]
[ext_resource type="PackedScene" uid="uid://b5kubn5aon20g" path="res://PackedScenes/Enemys/enemy_2.tscn" id="11_wipod"]
[ext_resource type="Script" path="res://Scripts/SoundtrackPlayer.gd" id="13_m8uve"]
[ext_resource type="Script" path="res://Scripts/ScoreManager.gd" id="14_awcq8"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_6bh8t"]
panorama = ExtResource("6_41ej3")

[sub_resource type="Sky" id="Sky_ahdk3"]
sky_material = SubResource("PanoramaSkyMaterial_6bh8t")

[sub_resource type="Environment" id="Environment_egf7b"]
background_mode = 2
background_energy_multiplier = 0.66
sky = SubResource("Sky_ahdk3")

[node name="Main" type="Node"]
script = ExtResource("1_onfnt")

[node name="Ship" parent="." instance=ExtResource("1_pklpr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 50, 50, 0)

[node name="XRCamera3D" parent="Ship/XROrigin3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.03899, 0.00950491)

[node name="Healthbar" parent="Ship" index="11"]
transform = Transform3D(-1, 0, -8.74228e-08, -7.49289e-08, 0.515173, 0.857086, 4.50378e-08, 0.857086, -0.515173, 0, -0.19207, 1.19937)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.347293, -0.580902, 0.736166, 0.24785, 0.813974, 0.525374, -0.90441, 2.14889e-07, 0.426664, 3.77487, 10.5043, 26.6551)
shadow_enabled = true

[node name="LevelGenerator" type="Node3D" parent="." node_paths=PackedStringArray("ship_node")]
script = ExtResource("2_56lf0")
ship_node = NodePath("../Ship")

[node name="MeteorChunkGenerator" type="Node" parent="LevelGenerator"]
script = ExtResource("5_6t7r7")
meteor_chunk_scene = ExtResource("3_c2weg")

[node name="Enemy1SpawnerGenerator" type="Node" parent="LevelGenerator"]
script = ExtResource("6_wuj5a")
enemy1_spawner_scene = ExtResource("5_sxyyw")

[node name="EmtyChunkGenerator" type="Node" parent="LevelGenerator"]
script = ExtResource("8_mh8ji")
emty_chunk_scene = ExtResource("9_n3uu1")

[node name="Enemy2Spawner" type="Node" parent="LevelGenerator"]
script = ExtResource("10_4c08n")
enemy2_scene = ExtResource("11_wipod")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Button" type="Button" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -139.0
offset_top = -48.0
offset_right = 140.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 70
text = "Reset"

[node name="StartButton" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -139.0
offset_top = 99.0
offset_right = 140.0
offset_bottom = 212.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 73
text = "Start"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_egf7b")

[node name="SoundtrackPlayer" type="Node" parent="."]
script = ExtResource("13_m8uve")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="SoundtrackPlayer"]
volume_db = -16.865
autoplay = true

[node name="ScoreManager" type="Node" parent="." node_paths=PackedStringArray("ship_node")]
script = ExtResource("14_awcq8")
ship_node = NodePath("../Ship")

[node name="ScoreUpdater" type="Timer" parent="ScoreManager"]
autostart = true

[connection signal="player_death" from="Ship" to="." method="_on_ship_player_death"]
[connection signal="button_pressed" from="Ship/XROrigin3D/RightHand" to="." method="_on_right_hand_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="finished" from="SoundtrackPlayer/MusicPlayer" to="SoundtrackPlayer" method="_on_music_player_finished"]
[connection signal="timeout" from="ScoreManager/ScoreUpdater" to="ScoreManager" method="_on_score_updater_timeout"]

[editable path="Ship"]
[editable path="Ship/Mesh"]
